fixed home button overlay covering it

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body {
 
 .wrapper {
   margin: 0 0;
+  z-index: -1;
 }
 
 header {
@@ -47,7 +48,6 @@ nav ul li a {
 
 nav ul li a:hover{
   background-color: solid white;
-  transform: translateY(20px);
 }
 
 nav ul li a.active:before{
@@ -77,7 +77,6 @@ nav ul li a::before {
 nav ul li a:hover::before{
   width: 70%;
   left: 50%;
-  transition: transform ease-out 0.2;
 }
 
 main {
@@ -110,7 +109,6 @@ h1 {
 .subhead {
   font-size: 1rem;
   font-weight: lighter;
-  
 }
 
 .cta-buttons{
@@ -243,6 +241,7 @@ p.product-price {
   height: 100%;
   animation: reveal 1s ease-in forwards;
   transform-origin: bottom;
+  pointer-events: none;
 }
 
 @keyframes reveal {
